# selene

./: .gitignore  Cargo.toml  README.md
assets/bash/: vep_wrapper.sh
assets/mion/: egg.mion
src/: cache.rs  config.rs  genomics.rs  input.rs  join.rs  lib.rs  main.rs  meta_lines.rs  mion.rs  misses.rs  output.rs  regions.rs  tabix.rs  tools.rs  tsv.rs  util.rs  variant.rs
src/cache/: input.rs  join.rs  meta_lines.rs  misses.rs  output.rs  regions.rs  run.rs
src/genomics/: assembly.rs  variant.rs
src/mion/: eval.rs  expressions.rs  ops.rs  parser.rs  string.rs  syntax.rs
src/mion/eval/: builtin.rs  eval.rs  expressions.rs  identifier.rs  predef.rs  scopes.rs  symbols.rs  values.rs
src/mion/eval/builtin/: join_files.rs  merge_all_files.rs  merge_sorted_files.rs  new.rs  pick_vep_results.rs  replace_file_name.rs  split_by_chrom.rs  tabix.rs  transform_vep_results.rs  utils.rs  vep.rs
src/mion/syntax/: expressions.rs  ops.rs  parser.rs  string.rs
src/script/: run.rs
src/tabix/: tabix_index.rs  tsv.rs
src/tools/: file_join.rs  file_sorted_merge.rs  id_adapt.rs  vep.rs  vep_output_pick.rs  vep_output_transform.rs
src/tsv/: id_pos_line.rs  pos_line.rs  util.rs
src/util/: error.rs  iter_util.rs  path_util.rs  sh_util.rs
workflows/: egg.mion  fortytwo.mion
