[package]
name = "selene"
description = "BGZ/TBI reader."
version = "2.2.5"
authors = ["Oliver Ruebenacker <oliverr@broadinstitute.org>"]
edition = "2018"
readme = "README.md"
repository = "https://github.com/broadinstitute/selene"
license = "BSD-3-Clause"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = "2.33.3"
bgzip = "0.2.1"
nom = "6.2.1"
fs-err = "2.6.0"

[features]
linux_installation = []

[package.metadata.deb]
maintainer = "Oliver Ruebenacker <oliverr@broadinstitute.org>"
copyright = "2021, Broad Institute of"
license-file = ["LICENSE", "0"]
extended-description = """\
Genomic analysis workflow toolkit"""
depends = "$auto"
section = "science"
priority = "optional"
features = ["linux_installation"]
assets = [
    ["target/release/selene", "usr/bin/", "755"],
    ["README.md", "usr/share/doc/selene/README.md", "644"],
    ["assets/bash/vep_wrapper.sh", "usr/share/selene/bash/vep_wrapper.sh", "755"],
]